backend-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  namespace: dev
  labels:
    app: backend
spec:
  containers:
    - name: backend-container
      image: python:3.9-slim
      command: ["/bin/sh", "-c"]
      args:
        - |
          mkdir -p /app && cat <<EOF > /app/server.py
          from http.server import BaseHTTPRequestHandler, HTTPServer

          class Handler(BaseHTTPRequestHandler):
              def do_GET(self):
                  self.send_response(200)
                  self.send_header('Content-type','text/plain')
                  self.end_headers()
                  self.wfile.write(b'Hello from Backend')

          if __name__ == '__main__':
              HTTPServer(('', 80), Handler).serve_forever()
          EOF
          python /app/server.py
      ports:
        - containerPort: 80
