frontend-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  namespace: dev
  labels:
    app: frontend
spec:
  containers:
    - name: frontend-container
      image: nginx:alpine
      ports:
        - containerPort: 80
